[package]
name = "net-sequence-sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
pcap = { version = "1.1.0", features = ["all-features"] }
pnet = { version = "0.34.0", features = ["pcap"] }
rtshark = "2.7.0"
